Bug 632030 - Reflect.parse handling of duplicate var declarations (r=jorendorff)